Implemented a basic timer

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>Time Tracking</title>
   </head>
   <body>
-    <button>Start</button>
+    <h1>Time Tracker</h1>
+    <button id="timer-btn">Start</button>
+    <button id="reset-btn">Reset</button>
+    <h3 id="time-display">00:00</h3>
   </body>
 </html>
