--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   </head>
   <body>
     <h1>Time Tracker</h1>
-    <button id="timer-btn">Start</button>
-    <button id="reset-btn">Reset</button>
+    <button id="timer-btn" class="btn-off-state">Start</button>
+    <button id="reset-btn" class="btn-off-state">Reset</button>
     <h3 id="time-display">00:00</h3>
   </body>
 </html>
