--- a/index.html
+++ b/index.html
@@ -5,13 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./styles.css" />
+    <script
+      src="https://kit.fontawesome.com/150d47471c.js"
+      crossorigin="anonymous"
+    ></script>
     <script defer src="./script.js"></script>
     <title>Time Tracking</title>
   </head>
   <body>
-    <h1>Time Tracker</h1>
-    <button id="timer-btn" class="btn-off-state">Start</button>
-    <button id="reset-btn" class="btn-off-state">Reset</button>
-    <h3 id="time-display">00:00</h3>
+    <header>
+      <h1>Time Tracker</h1>
+    </header>
+    <div>
+      <button id="timer-btn" class="btn-off-state">Start</button>
+      <button id="reset-btn" class="btn-off-state">Reset</button>
+      <h3 id="time-display">00m 00s</h3>
+    </div>
+
+    <hr />
+
+    <div id="add-task">
+      <h3>Add task</h3>
+      <input type="text" style="width:20em; height:2em" class="task-input" />
+      <input type="text" placeholder="Effort: 5h 15m" />
+      <button class="add-task-btn">Add</button>
+    </div>
+
+    <h4>Task List</h4>
+    <div id="task-list-div">
+      <!-- <button>Delete</button>
+      <button id="timer-btn" class="btn-off-state">Start</button>
+      <button id="reset-btn" class="btn-off-state">Reset</button>
+      <h3 id="time-display">00m 00s</h3> -->
+    </div>
   </body>
 </html>
