Created a timer.js module

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       src="https://kit.fontawesome.com/150d47471c.js"
       crossorigin="anonymous"
     ></script>
-    <script defer src="./script.js"></script>
+    <script type="module" defer src="./script.js"></script>
     <title>Time Tracking</title>
   </head>
   <body>
