Tasks will now be rendered from saved localStorage object. This gives the ability to persist tasks across sessions.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       crossorigin="anonymous"
     ></script>
     <script defer src="./script.js"></script>
+    <!-- <script defer type="module" src="./script.js"></script> -->
     <title>Time Tracking</title>
   </head>
   <body>
